[gd_scene load_steps=10 format=3 uid="uid://0d32m0s2x5tu"]

[ext_resource type="Script" path="res://node2D.gd" id="1_l5tad"]
[ext_resource type="Script" path="res://HintIconPath.gd" id="2_01olv"]
[ext_resource type="Texture2D" uid="uid://bxmqg0pmb6p6y" path="res://images/hand.png" id="2_c3ohi"]
[ext_resource type="PackedScene" uid="uid://7c6h41n64sxj" path="res://character.tscn" id="2_dx665"]
[ext_resource type="Script" path="res://optionButton.gd" id="3_2t32y"]
[ext_resource type="Texture2D" uid="uid://704vuyl2j5tc" path="res://images/background.jpg" id="3_q8o36"]
[ext_resource type="FontFile" uid="uid://43xmf8kfnhyh" path="res://fonts/ComicMono-Bold.ttf" id="7_vyla4"]

[sub_resource type="Curve2D" id="Curve2D_4qvah"]

[sub_resource type="LabelSettings" id="LabelSettings_6bfij"]
font_size = 300

[node name="Node2D" type="Node2D"]
script = ExtResource("1_l5tad")
characterScene = ExtResource("2_dx665")
fontPaths = ExtResource("7_vyla4")
fontSize = 250
animationDelay = 0.5

[node name="Pen" type="Line2D" parent="."]
texture_filter = 1
width = 50.0
default_color = Color(4.81307e-07, 0.417963, 0.419027, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 32

[node name="Container" type="Node" parent="."]

[node name="HintIconPath" type="Path2D" parent="."]
position = Vector2(576, 480)
curve = SubResource("Curve2D_4qvah")
script = ExtResource("2_01olv")

[node name="PathFollow2D" type="PathFollow2D" parent="HintIconPath"]

[node name="Sprite2D" type="Sprite2D" parent="HintIconPath/PathFollow2D"]
z_index = 1
position = Vector2(0, 30)
scale = Vector2(0.03, 0.03)
texture = ExtResource("2_c3ohi")

[node name="CPUParticles2D" type="CPUParticles2D" parent="HintIconPath/PathFollow2D"]
emitting = false
amount = 13
lifetime_randomness = 0.59
emission_shape = 2
emission_sphere_radius = 13.0
gravity = Vector2(50, 50)
color = Color(0.498039, 0.980392, 0.52549, 1)

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
position = Vector2(492, 382)
invert_enabled = true

[node name="HUI" type="CanvasLayer" parent="."]
layer = -2

[node name="Control" type="Control" parent="HUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="HUI/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_q8o36")
expand_mode = 2
stretch_mode = 5

[node name="OptionButton" type="OptionButton" parent="HUI/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -146.0
offset_bottom = 73.0
grow_horizontal = 0
focus_mode = 0
alignment = 1
item_count = 2
selected = 0
allow_reselect = true
popup/item_0/text = "CHOOSE"
popup/item_0/id = 0
popup/item_1/text = "12345"
popup/item_1/id = 1
script = ExtResource("3_2t32y")

[node name="Check" type="Button" parent="HUI/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -103.0
offset_top = -57.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
text = "CHECK"

[node name="Label" type="Label" parent="HUI/Control"]
self_modulate = Color(0, 0, 0, 1)
clip_children = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -192.0
offset_right = 310.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
label_settings = SubResource("LabelSettings_6bfij")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="characterChanged" from="HUI/Control/OptionButton" to="." method="_on_character_changed"]
[connection signal="item_selected" from="HUI/Control/OptionButton" to="HUI/Control/OptionButton" method="_on_item_selected"]
[connection signal="pressed" from="HUI/Control/Check" to="." method="_on_check_pressed"]
